# grayscott

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
compute-autovec/: Cargo.toml
compute-autovec/benches/: benchmark.rs
compute-autovec/src/: lib.rs
compute-bench/: Cargo.toml
compute-bench/src/: lib.rs
compute-gpu/: Cargo.toml
compute-manualvec/: Cargo.toml
compute-manualvec/benches/: benchmark.rs
compute-naive/: Cargo.toml
compute-naive/benches/: benchmark.rs
compute-naive/src/: lib.rs
compute-regular/: Cargo.toml
compute-regular/benches/: benchmark.rs
compute-regular/src/: lib.rs
compute/autovec/: Cargo.toml
compute/autovec/benches/: benchmark.rs  compute_autovec.rs
compute/autovec/src/: lib.rs
compute/bench/: Cargo.toml
compute/block/: Cargo.toml
compute/block/benches/: benchmark.rs  compute_block.rs
compute/block/src/: args.rs  default.rs  lib.rs
compute/gpu/naive/: Cargo.toml
compute/gpu/naive/benches/: benchmark.rs  compute_gpu_naive.rs
compute/gpu/naive/src/: image.glsl  images.rs  lib.rs  main.comp  parameters.rs  pipeline.rs  requirements.rs  shader.glsl  species.rs
compute/gpu/shared/: Cargo.toml
compute/gpu/shared/src/: lib.rs
compute/gpu/specialized/: Cargo.toml
compute/gpu/specialized/benches/: benchmark.rs
compute/gpu/specialized/src/: args.rs  lib.rs  main.comp  pipeline.rs  specialization.rs
compute/manualvec/: Cargo.toml
compute/manualvec/benches/: benchmark.rs
compute/manualvec/src/: lib.rs  simd.rs
compute/naive/: Cargo.toml
compute/naive/benches/: benchmark.rs
compute/naive/src/: lib.rs
compute/parallel/: Cargo.toml
compute/parallel/benches/: benchmark.rs  compute_parallel.rs
compute/parallel/src/: args.rs  block.rs  lib.rs
compute/regular/: Cargo.toml
compute/regular/benches/: benchmark.rs  compute_regular.rs
compute/regular/src/: lib.rs
compute/selector/: Cargo.toml
compute/selector/src/: lib.rs
compute/shared/: Cargo.toml
compute/shared/src/: benchmark.rs  cpu.rs  gpu.rs  lib.rs
compute/shared/src/gpu/: cache.rs  context.rs  device.rs  instance.rs  library.rs  mod.rs
compute/shared/src/gpu/config/: defaults.rs  mod.rs
compute/shared/src/gpu/context/: cache.rs  device.rs  instance.rs  mod.rs
compute/shared/src/gpu/context/config/: defaults.rs  mod.rs  requirements.rs
data/: Cargo.toml
data-to-pics/: Cargo.toml
data-to-pics/src/: main.rs  split.rs
data/src/: concentration.rs  hdf5.rs  lib.rs  parameters.rs
data/src/concentration/: mod.rs  simd.rs
data/src/concentration/gpu/: image.rs  mod.rs  shape.rs
data/src/concentration/gpu/image/: context.rs  mod.rs
data/src/concentration/simd/: mod.rs  safe_arch.rs  slipstream.rs
data/src/concentration/simd/safe_arch/: mod.rs
data/src/concentration/simd/safe_arch/xmm/: indices.rs  masks.rs  mod.rs  values.rs
data/src/concentration/simd/safe_arch/ymm/: indices.rs  masks.rs  mod.rs  values.rs
livesim/: Cargo.toml
livesim/src/: context.rs  cpu.comp  frames.rs  input.rs  main.rs  palette.rs  pipeline.rs  surface.rs
reaction/: Cargo.toml
reaction/src/: main.rs
simulate/: Cargo.toml
simulate/src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs
