[workspace]
members = [
    "compute/autovec",
    "compute/block",
    "compute/gpu/shared",
    "compute/manualvec",
    "compute/naive",
    "compute/parallel",
    "compute/regular",
    "compute/shared",
    "data",
    "data-to-pics",
    "reaction"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Used to safely manipulate data as bytes
bytemuck = "1.13"

# Used for various feature flag wrangling purposes
cfg-if = "1.0"

# Used when processing user CLI arguments in binaries
clap = { version = "4.3", features = ["derive"] }

# Used when visualizing data
colorous = "1.0"

# Used to lay out data the way GPUs like
crevice = "0.13"

# Used for microbenchmarking
criterion = { version = "0.5", default-features = false }

# Standard OS directories (used for GPU pipeline cache storage)
directories = "5.0"

# Used for tests that emit logs
env_logger = "0.10"

# Used when saving raw data to files
hdf5 = "0.8"

# Used for cache locality optimizations
# FIXME: Switch to a fixed release once they are available
hwlocality = { git = "https://github.com/HadrienG2/hwlocality.git" }

# Used for progress report in the binaries
indicatif = "0.17"

# Used when exporting visualizations as images
image = { version = "0.24", default-features = false, features = ["png"] }

# Used to log diagnostic info from third-party libraries (e.g. Vulkan)
log = "0.4"

# Basic multidimensional array abstraction
ndarray = "0.15"

# Used to safely handle self-referential data
ouroboros = "0.15"

# Data-parallelism library
rayon = "1.7"

# Intrinsics-based SIMD backend
safe_arch = "0.6"

# Autovectorization-based SIMD backend
slipstream = "0.2.1"

# Syslog-based log output
syslog = "6.1"

# Used to ease writing new error types
thiserror = "1.0"

# Interface to the Vulkan GPU library
vulkano = "0.33"

# Internal to this project
compute.path = "compute/shared"
compute_autovec.path = "compute/autovec"
compute_gpu.path = "compute/gpu/shared"
compute_block.path = "compute/block"
compute_manualvec.path = "compute/manualvec"
compute_naive.path = "compute/naive"
compute_parallel.path = "compute/parallel"
compute_regular.path = "compute/regular"
data.path = "data"

[profile.dev]
# Keep the speed of debug builds reasonable
opt-level = 1

[profile.release]
# Maximal and reproducible performance at the cost of compile time
codegen-units = 1
# Good for perf profiling
debug = 1
