[package]
name = "compute-autovec"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
data = { path = "../data", features = ["slipstream"] }
ndarray = "0.15"
slipstream = "0.2"

[dev-dependencies]
compute-bench = { path = "../compute-bench" }
criterion = { version = "0.3", default-features = false }

[[bench]]
name = "benchmark"
harness = false