[package]
name = "data-to-pics"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
colorous.workspace = true
crossbeam-channel.workspace = true
data.workspace = true
image.workspace = true
indicatif.workspace = true
ndarray.workspace = true
rayon.workspace = true

# Criterion workaround for lack of stable benchmark harness
[[bin]]
name = "data-to-pics"
path = "src/main.rs"
bench = false
