[package]
name = "data-to-pics"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
crossbeam-channel.workspace = true
data = { workspace = true, features = ["hdf5"] }
eyre.workspace = true
image.workspace = true
ndarray.workspace = true
rayon.workspace = true
ui = { workspace = true, features = ["tui", "visualization"] }

# Criterion workaround for lack of stable benchmark harness
[[bin]]
name = "data-to-pics"
path = "src/main.rs"
bench = false
