[package]
name = "data"
version.workspace = true
edition.workspace = true

[features]
# GPU storage backend
gpu = ["self_cell", "thiserror", "vulkano"]

# Annotate GPU-side objects with a useful name for debuggers, profilers...
# Requires the VK_EXT_debug_utils extension, will cause a little overhead
gpu-debug-utils = ["gpu"]

# Make it possible to upload simulation parameters to a GPU buffer
gpu-parameters = ["bytemuck", "crevice", "gpu"]

# SIMD storage backends
safe_arch = ["dep:safe_arch", "simd"]
slipstream = ["simd", "dep:slipstream"]

# Commonalities between SIMD backends (automatically enabled when needed)
simd = []

[dependencies]
cfg-if.workspace = true
ndarray.workspace = true

# HDF5 storage
hdf5 = { workspace = true, optional = true }

# SIMD backends
safe_arch = { workspace = true, optional = true }
slipstream = { workspace = true, optional = true }

# GPU backend dependencies
self_cell = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
vulkano = { workspace = true, optional = true }

# GPU parameter upload dependencies
bytemuck = { workspace = true, optional = true }
crevice = { workspace = true, optional = true }

# Criterion workaround for lack of stable benchmark harness
[lib]
bench = false
