[package]
name = "data"
version.workspace = true
edition.workspace = true

[features]
# GPU storage backend
gpu = ["self_cell", "thiserror", "vulkano"]

# Annotate GPU-side objects with a useful name for debuggers, profilers...
# Requires the VK_EXT_debug_utils extension, will cause a little overhead
gpu-debug-utils = ["gpu"]

# Make it possible to upload simulation parameters to a GPU buffer
gpu-parameters = ["bytemuck", "crevice", "gpu"]

# SIMD storage backends
safe_arch = ["dep:safe_arch", "simd"]
slipstream = ["simd", "dep:slipstream"]

# Commonalities between SIMD backends (automatically enabled by above backends)
simd = []

# Switch to run-time stencil weights lookup
#
# By default, the code leverages the fact that stencil weights are known at
# compile time (and all equal to 1). If you would like to know how expensive it
# would be to give up on this specialization and use generic code that works for
# any set of stencil weights, turn on this feature flag.
runtime-weights = []

[dependencies]
cfg-if.workspace = true
ndarray.workspace = true

# HDF5 storage
hdf5 = { workspace = true, optional = true }

# SIMD backends
safe_arch = { workspace = true, optional = true }
slipstream = { workspace = true, optional = true }

# GPU backend dependencies
self_cell = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
vulkano = { workspace = true, optional = true }

# GPU parameter upload dependencies
bytemuck = { workspace = true, optional = true }
crevice = { workspace = true, optional = true }

# Criterion workaround for lack of stable benchmark harness
[lib]
bench = false
