[package]
name = "reaction"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
clap = { version = "4.1", features = ["derive"] }
compute = { path = "../compute/shared" }
data = { path = "../data" }
indicatif = "0.17"

# Compute backends
autovec = { path = "../compute/autovec", optional = true }
block = { path = "../compute/block", optional = true }
manualvec = { path = "../compute/manualvec", optional = true }
naive = { path = "../compute/naive", optional = true }
regular = { path = "../compute/regular", optional = true }

[dev-dependencies]
naive = { path = "../compute/naive" }
