[package]
name = "reaction"
version.workspace = true
edition.workspace = true

[dependencies]
cfg-if.workspace = true
clap.workspace = true
compute.workspace = true
data.workspace = true
indicatif.workspace = true
log.workspace = true
syslog.workspace = true

# Compute backends
compute_autovec = { workspace = true, optional = true }
compute_block = { workspace = true, optional = true }
compute_gpu_naive = { workspace = true, optional = true }
compute_manualvec = { workspace = true, optional = true }
compute_naive = { workspace = true, optional = true }
compute_parallel = { workspace = true, optional = true }
compute_regular = { workspace = true, optional = true }

[dev-dependencies]
compute_naive.workspace = true
