[package]
name = "compute_autovec"
version.workspace = true
edition.workspace = true

[dependencies]
cfg-if.workspace = true
compute = { workspace = true, features = ["cpu"] }
data = { workspace = true, features = ["slipstream"] }
slipstream.workspace = true

# FIXME: Propagate if useful
itertools = "0.11"

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }

# Criterion workarounds for lack of stable benchmark harness
[[bench]]
name = "benchmark"
harness = false
#
[lib]
bench = false