[package]
name = "compute_autovec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if.workspace = true
compute = { workspace = true, features = ["cpu"] }
data = { workspace = true, features = ["slipstream"] }
slipstream.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }

# Criterion workarounds for lack of stable benchmark harness
[[bench]]
name = "compute_autovec"
harness = false
#
[lib]
bench = false