[package]
name = "compute_block"
version.workspace = true
edition.workspace = true

[dependencies]
compute.workspace = true
compute_autovec.workspace = true
data.workspace = true
hwlocality.workspace = true
thiserror.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }
criterion.workspace = true

[[bench]]
name = "benchmark"
harness = false