[package]
name = "compute_block"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["env"] }
compute.workspace = true
compute_autovec.workspace = true
data.workspace = true
hwlocality.workspace = true
thiserror.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }

[[bench]]
name = "benchmark"
harness = false