[package]
name = "manualvec"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
compute = { path = "../shared" }
data = { path = "../../data", features = ["safe_arch"] }
ndarray = "0.15"
safe_arch = "0.6"

[dev-dependencies]
compute = { path = "../shared", features = ["criterion"] }
criterion = { version = "0.3", default-features = false }

[[bench]]
name = "benchmark"
harness = false