[package]
name = "compute_manualvec"
version.workspace = true
edition.workspace = true

[dependencies]
cfg-if.workspace = true
compute = { workspace = true, features = ["cpu"] }
data = { workspace = true, features = ["safe_arch"] }
safe_arch.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }

# Criterion workarounds for lack of stable benchmark harness
[[bench]]
name = "benchmark"
harness = false
#
[lib]
bench = false