[package]
name = "compute_naive"
version.workspace = true
edition.workspace = true

[dependencies]
compute.workspace = true
data.workspace = true
ndarray.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }
criterion.workspace = true

[[bench]]
name = "benchmark"
harness = false