[package]
name = "regular"
version = "0.1.0"
edition = "2021"

[dependencies]
compute = { path = "../shared" }
data = { path = "../../data" }
ndarray = "0.15"

[dev-dependencies]
compute = { path = "../shared", features = ["criterion"] }
criterion = { version = "0.3", default-features = false }

[[bench]]
name = "benchmark"
harness = false