[package]
name = "compute"
version.workspace = true
edition.workspace = true

[features]
criterion = ["dep:criterion", "env_logger"]

[dependencies]
clap.workspace = true
data.workspace = true
ndarray.workspace = true

# Benchmarking deps
criterion = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

# Criterion workaround for lack of stable benchmark harness
[lib]
bench = false
