[package]
name = "compute"
version.workspace = true
edition.workspace = true

[features]
cpu = []
criterion = ["dep:criterion", "env_logger"]
gpu = ["data/gpu", "directories", "log", "thiserror", "vulkano"]

[dependencies]
clap.workspace = true
data.workspace = true
ndarray.workspace = true

# Criterion benchmarking dependencies
criterion = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

# GPU dependencies
directories = { workspace = true, optional = true }
log = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
vulkano = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true

# Criterion workaround for lack of stable benchmark harness
[lib]
bench = false
