[package]
name = "compute"
version.workspace = true
edition.workspace = true

[features]
# CPU compute backend commonalities
cpu = []

# Benchmarking using criterion
criterion = ["dep:criterion", "env_logger"]

# GPU compute backend commonalities
gpu = ["data/gpu", "directories", "log", "thiserror", "vulkano"]

# Functionality needed for live simulation display
livesim = ["gpu", "vulkano-win", "winit"]

# Annotate GPU-side objects with a useful name for debuggers, profilers...
# Requires the VK_EXT_debug_utils extension, will cause a little overhead
gpu-debug-utils = ["data/gpu-debug-utils", "gpu"]

[dependencies]
clap.workspace = true
data.workspace = true
ndarray.workspace = true

# Criterion benchmarking dependencies
criterion = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

# GPU dependencies
directories = { workspace = true, optional = true }
log = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
vulkano = { workspace = true, optional = true }

# Live simulation display dependencies
vulkano-win = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true

# Criterion workaround for lack of stable benchmark harness
[lib]
bench = false
