[package]
name = "compute_gpu_naive"
version.workspace = true
edition.workspace = true

[dependencies]
compute = { workspace = true, features = ["gpu"] }
crevice.workspace = true
data = { workspace = true, features = ["gpu-parameters"] }
thiserror.workspace = true
vulkano.workspace = true
vulkano-shaders.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }

# Criterion workarounds for lack of stable benchmark harness
[[bench]]
name = "benchmark"
harness = false
#
[lib]
bench = false