[package]
name = "compute_gpu"
version.workspace = true
edition.workspace = true

[dependencies]
directories.workspace = true
log.workspace = true
thiserror.workspace = true
vulkano.workspace = true

[dev-dependencies]
env_logger.workspace = true

# Criterion workaround for lack of stable benchmark harness
[lib]
bench = false
