[package]
name = "compute_gpu_specialized"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["env"] }
compute = { workspace = true, features = ["gpu"] }
compute_gpu_naive.workspace = true
data = { workspace = true, features = ["gpu"] }
vulkano.workspace = true
vulkano-shaders.workspace = true

[dev-dependencies]
compute = { workspace = true, features = ["criterion"] }

# Criterion workarounds for lack of stable benchmark harness
[[bench]]
name = "benchmark"
harness = false
#
[lib]
bench = false